--- a/forms/adminTimeSlotConfigForm.json
+++ b/forms/adminTimeSlotConfigForm.json
@@ -1,14 +1,67 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [],
+            "elements": [{
+                "className": "org.joget.apps.form.lib.SelectBox",
+                "properties": {
+                    "controlField": "",
+                    "readonly": "",
+                    "size": "",
+                    "optionsBinder": {
+                        "className": "org.joget.apps.form.lib.FormOptionsBinder",
+                        "properties": {
+                            "addEmptyOption": "true",
+                            "groupingColumn": "facilityName",
+                            "useAjax": "",
+                            "formDefId": "adminFacilityConfigurationForm",
+                            "labelColumn": "facilityName",
+                            "extraCondition": "",
+                            "cacheInterval": "",
+                            "emptyLabel": "",
+                            "idColumn": "facilityName"
+                        }
+                    },
+                    "multiple": "",
+                    "options": [],
+                    "validator": {
+                        "className": "",
+                        "properties": {}
+                    },
+                    "workflowVariable": "",
+                    "label": "Select Box",
+                    "id": "field1",
+                    "value": "",
+                    "readonlyLabel": ""
+                }
+            }],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
         "className": "org.joget.apps.form.model.Section",
         "properties": {
-            "label": "Section",
-            "id": "section1"
+            "visibilityControl": "",
+            "permissionReadonly": "",
+            "permission": {
+                "className": "",
+                "properties": {}
+            },
+            "label": "Facility ID",
+            "reverse": "",
+            "storeBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "visibilityValue": "",
+            "regex": "",
+            "readonly": "",
+            "loadBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "comment": "",
+            "id": "facilityId",
+            "join": "",
+            "readonlyLabel": ""
         }
     }],
     "className": "org.joget.apps.form.model.Form",
