--- a/forms/adminEmailConfigForm.json
+++ b/forms/adminEmailConfigForm.json
@@ -1,7 +1,64 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [],
+            "elements": [
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "controlField": "",
+                        "readonly": "",
+                        "size": "",
+                        "optionsBinder": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "multiple": "",
+                        "options": [
+                            {
+                                "label": "Booking Approved",
+                                "value": "Booking Approved",
+                                "grouping": "Email Notification Type"
+                            },
+                            {
+                                "label": "Booking Rejected",
+                                "value": "Booking Rejected",
+                                "grouping": "Email Notification Type"
+                            },
+                            {
+                                "label": "Reminder",
+                                "value": "Reminder",
+                                "grouping": "Email Notification Type"
+                            },
+                            {
+                                "label": "Announcement",
+                                "value": "Announcement",
+                                "grouping": "Email Notification Type"
+                            }
+                        ],
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "workflowVariable": "",
+                        "label": "Notification Type",
+                        "id": "emailNotificationType",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.TextField",
+                    "properties": {
+                        "encryption": "false",
+                        "readonly": "False",
+                        "style": "",
+                        "label": "Text Field",
+                        "id": "field2",
+                        "readonlyLabel": "False",
+                        "storeNumeric": "False"
+                    }
+                }
+            ],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
