--- a/forms/adminEmailConfigForm.json
+++ b/forms/adminEmailConfigForm.json
@@ -49,23 +49,60 @@
                 {
                     "className": "org.joget.apps.form.lib.TextField",
                     "properties": {
-                        "encryption": "false",
-                        "readonly": "False",
+                        "requiredSanitize": "",
+                        "maxlength": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "label": "Email Subject",
+                        "disableIncrementDecrementArrow": "",
+                        "encryption": "",
+                        "readonly": "",
+                        "size": "",
+                        "workflowVariable": "",
                         "style": "",
-                        "label": "Text Field",
-                        "id": "field2",
-                        "readonlyLabel": "False",
-                        "storeNumeric": "False"
+                        "id": "emailSubject",
+                        "placeholder": "",
+                        "value": "",
+                        "readonlyLabel": "",
+                        "storeNumeric": ""
                     }
                 }
             ],
             "className": "org.joget.apps.form.model.Column",
-            "properties": {"width": "100%"}
+            "properties": {
+                "horizontal": "",
+                "customWidth": "",
+                "width": "100%",
+                "label": ""
+            }
         }],
         "className": "org.joget.apps.form.model.Section",
         "properties": {
-            "label": "Section",
-            "id": "section1"
+            "visibilityControl": "",
+            "permissionReadonly": "",
+            "permission": {
+                "className": "",
+                "properties": {}
+            },
+            "label": "Email Config Form",
+            "reverse": "",
+            "storeBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "visibilityValue": "",
+            "regex": "",
+            "readonly": "",
+            "loadBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "comment": "",
+            "id": "emailConfigForm",
+            "join": "",
+            "readonlyLabel": ""
         }
     }],
     "className": "org.joget.apps.form.model.Form",
