--- a/forms/adminGoogleCalendarConfigForm.json
+++ b/forms/adminGoogleCalendarConfigForm.json
@@ -1,7 +1,138 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [],
+            "elements": [
+                {
+                    "className": "org.joget.apps.form.lib.TextField",
+                    "properties": {
+                        "requiredSanitize": "",
+                        "maxlength": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please enter an API key!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "label": "API Key",
+                        "disableIncrementDecrementArrow": "",
+                        "encryption": "",
+                        "readonly": "",
+                        "size": "",
+                        "workflowVariable": "",
+                        "style": "",
+                        "id": "apiKey",
+                        "placeholder": "",
+                        "value": "",
+                        "readonlyLabel": "",
+                        "storeNumeric": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.TextField",
+                    "properties": {
+                        "requiredSanitize": "",
+                        "maxlength": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please enter a calendar ID!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "label": "Calendar ID",
+                        "disableIncrementDecrementArrow": "",
+                        "encryption": "",
+                        "readonly": "",
+                        "size": "",
+                        "workflowVariable": "",
+                        "style": "",
+                        "id": "calendarID",
+                        "placeholder": "",
+                        "value": "",
+                        "readonlyLabel": "",
+                        "storeNumeric": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.CheckBox",
+                    "properties": {
+                        "fullWidth": "",
+                        "controlField": "",
+                        "readonly": "",
+                        "optionsBinder": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "options": [
+                            {
+                                "label": "Yes",
+                                "value": "Yes",
+                                "grouping": "Email Enable Sync"
+                            },
+                            {
+                                "label": "No",
+                                "value": "No",
+                                "grouping": "Email Enable Sync"
+                            }
+                        ],
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please enable/disable sync!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "workflowVariable": "",
+                        "label": "Enable Sync",
+                        "id": "enableSync",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "controlField": "",
+                        "readonly": "",
+                        "size": "",
+                        "optionsBinder": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "multiple": "",
+                        "options": [
+                            {
+                                "label": "Hourly",
+                                "value": "Hourly",
+                                "grouping": "Email Sync Frequency"
+                            },
+                            {
+                                "label": "Daily",
+                                "value": "Daily",
+                                "grouping": "Email Sync Frequency"
+                            },
+                            {
+                                "label": "Weekly",
+                                "value": "Weekly",
+                                "grouping": "Email Sync Frequency"
+                            }
+                        ],
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "workflowVariable": "",
+                        "label": "Sync Frequency",
+                        "id": "syncFrequency",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                }
+            ],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
