--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -3,131 +3,55 @@
         "elements": [{
             "elements": [
                 {
-                    "className": "org.joget.apps.form.lib.HiddenField",
+                    "className": "org.joget.apps.form.lib.SubForm",
                     "properties": {
-                        "useDefaultWhenEmpty": "",
-                        "validator": {
-                            "className": "",
+                        "parentSubFormId": "",
+                        "readonly": "",
+                        "loadBinder": {
+                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
                             "properties": {}
                         },
-                        "workflowVariable": "",
-                        "id": "bookingId",
-                        "value": ""
-                    }
-                },
-                {
-                    "className": "org.joget.apps.form.lib.TextField",
-                    "properties": {
-                        "requiredSanitize": "",
-                        "permissionHidden": "",
-                        "maxlength": "",
-                        "validator": {
-                            "className": "",
+                        "noframe": "",
+                        "formDefId": "FacilitiesBookingRequestForm",
+                        "subFormParentId": "",
+                        "id": "field1",
+                        "label": "",
+                        "storeBinder": {
+                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
                             "properties": {}
                         },
-                        "label": "Facility Name",
-                        "disableIncrementDecrementArrow": "",
-                        "encryption": "",
-                        "readonly": "true",
-                        "size": "",
-                        "workflowVariable": "",
-                        "style": "",
-                        "id": "facilityName",
-                        "placeholder": "",
-                        "value": "",
-                        "readonlyLabel": "",
-                        "storeNumeric": ""
-                    }
-                },
-                {
-                    "className": "org.joget.apps.form.lib.DatePicker",
-                    "properties": {
-                        "permissionHidden": "",
-                        "yearRange": "c-10:c+10",
-                        "dataFormat": "yyyy-MM-dd",
-                        "startDateFieldId": "",
-                        "validator": {
-                            "className": "",
-                            "properties": {}
-                        },
-                        "format": "",
-                        "label": "Booking Date",
-                        "datePickerType": "",
-                        "currentDateAs": "",
-                        "endDateFieldId": "",
-                        "readonly": "true",
-                        "allowManual": "",
-                        "workflowVariable": "",
-                        "id": "bookingDate",
-                        "placeholder": "",
-                        "disableWeekends": "",
-                        "value": "",
                         "readonlyLabel": ""
                     }
                 },
                 {
-                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "className": "org.joget.apps.form.lib.Radio",
                     "properties": {
+                        "fullWidth": "",
                         "controlField": "",
                         "readonly": "",
-                        "size": "",
                         "optionsBinder": {
                             "className": "",
                             "properties": {}
                         },
-                        "multiple": "",
                         "options": [
                             {
-                                "label": "",
-                                "value": "",
-                                "grouping": ""
+                                "label": "Approve",
+                                "value": "Approve",
+                                "grouping": "status"
                             },
                             {
-                                "label": "Pending",
-                                "value": "",
-                                "grouping": ""
-                            },
-                            {
-                                "label": "Approved",
-                                "value": "",
-                                "grouping": ""
-                            },
-                            {
-                                "label": "Rejected",
-                                "value": "",
-                                "grouping": ""
+                                "label": "Reject",
+                                "value": "Reject",
+                                "grouping": "status"
                             }
                         ],
-                        "validator": {
-                            "className": "org.joget.apps.form.lib.DefaultValidator",
-                            "properties": {
-                                "type": "",
-                                "message": "Please select an option",
-                                "mandatory": "true"
-                            }
-                        },
-                        "workflowVariable": "",
-                        "label": "Status",
-                        "id": "bookingApprovalStatus",
-                        "value": "",
-                        "readonlyLabel": ""
-                    }
-                },
-                {
-                    "className": "org.joget.apps.form.lib.TextArea",
-                    "properties": {
-                        "requiredSanitize": "",
-                        "readonly": "",
                         "validator": {
                             "className": "",
                             "properties": {}
                         },
                         "workflowVariable": "",
-                        "label": "Remark",
-                        "id": "managerRemarks",
-                        "placeholder": "",
-                        "rows": "5",
-                        "cols": "20",
+                        "label": "Status",
+                        "id": "status",
                         "value": "",
                         "readonlyLabel": ""
                     }
