--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -4,11 +4,44 @@
             "elements": [{
                 "className": "org.joget.apps.form.lib.SelectBox",
                 "properties": {
-                    "readonly": "False",
-                    "multiple": "False",
-                    "label": "Select Box",
-                    "id": "field1",
-                    "readonlyLabel": "False"
+                    "controlField": "",
+                    "readonly": "",
+                    "size": "",
+                    "optionsBinder": {
+                        "className": "",
+                        "properties": {}
+                    },
+                    "multiple": "",
+                    "options": [
+                        {
+                            "label": "Usage",
+                            "value": "Usage",
+                            "grouping": "Report Type"
+                        },
+                        {
+                            "label": "Feedback Summary",
+                            "value": "Feedback Summary",
+                            "grouping": "Report Type"
+                        },
+                        {
+                            "label": "Peak Time",
+                            "value": "Peak Time",
+                            "grouping": "Report Type"
+                        }
+                    ],
+                    "validator": {
+                        "className": "org.joget.apps.form.lib.DefaultValidator",
+                        "properties": {
+                            "type": "",
+                            "message": "Please select a report type!",
+                            "mandatory": "true"
+                        }
+                    },
+                    "workflowVariable": "",
+                    "label": "Report Type",
+                    "id": "reportType",
+                    "value": "",
+                    "readonlyLabel": ""
                 }
             }],
             "className": "org.joget.apps.form.model.Column",
@@ -16,8 +49,29 @@
         }],
         "className": "org.joget.apps.form.model.Section",
         "properties": {
-            "label": "Section",
-            "id": "section1"
+            "visibilityControl": "",
+            "permissionReadonly": "",
+            "permission": {
+                "className": "",
+                "properties": {}
+            },
+            "label": "Report Config Form",
+            "reverse": "",
+            "storeBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "visibilityValue": "",
+            "regex": "",
+            "readonly": "",
+            "loadBinder": {
+                "className": "",
+                "properties": {}
+            },
+            "comment": "",
+            "id": "reportConfigForm",
+            "join": "",
+            "readonlyLabel": ""
         }
     }],
     "className": "org.joget.apps.form.model.Form",
