--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -97,7 +97,7 @@
                             }
                         },
                         "format": "",
-                        "label": "Start Dates",
+                        "label": "Start Date",
                         "datePickerType": "",
                         "currentDateAs": "",
                         "endDateFieldId": "",
@@ -105,6 +105,35 @@
                         "allowManual": "",
                         "workflowVariable": "",
                         "id": "startDate",
+                        "placeholder": "",
+                        "disableWeekends": "",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.DatePicker",
+                    "properties": {
+                        "yearRange": "c-10:c+10",
+                        "dataFormat": "yyyy-MM-dd",
+                        "startDateFieldId": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select an end date!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "format": "",
+                        "label": "End Date",
+                        "datePickerType": "",
+                        "currentDateAs": "",
+                        "endDateFieldId": "",
+                        "readonly": "",
+                        "allowManual": "",
+                        "workflowVariable": "",
+                        "id": "endDate",
                         "placeholder": "",
                         "disableWeekends": "",
                         "value": "",
