--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -1,49 +1,63 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [{
-                "className": "org.joget.apps.form.lib.SelectBox",
-                "properties": {
-                    "controlField": "",
-                    "readonly": "",
-                    "size": "",
-                    "optionsBinder": {
-                        "className": "",
-                        "properties": {}
-                    },
-                    "multiple": "",
-                    "options": [
-                        {
-                            "label": "Usage",
-                            "value": "Usage",
-                            "grouping": "Report Type"
+            "elements": [
+                {
+                    "className": "org.joget.apps.form.lib.SelectBox",
+                    "properties": {
+                        "controlField": "",
+                        "readonly": "",
+                        "size": "",
+                        "optionsBinder": {
+                            "className": "",
+                            "properties": {}
                         },
-                        {
-                            "label": "Feedback Summary",
-                            "value": "Feedback Summary",
-                            "grouping": "Report Type"
+                        "multiple": "",
+                        "options": [
+                            {
+                                "label": "Usage",
+                                "value": "Usage",
+                                "grouping": "Report Type"
+                            },
+                            {
+                                "label": "Feedback Summary",
+                                "value": "Feedback Summary",
+                                "grouping": "Report Type"
+                            },
+                            {
+                                "label": "Peak Time",
+                                "value": "Peak Time",
+                                "grouping": "Report Type"
+                            }
+                        ],
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select a report type!",
+                                "mandatory": "true"
+                            }
                         },
-                        {
-                            "label": "Peak Time",
-                            "value": "Peak Time",
-                            "grouping": "Report Type"
-                        }
-                    ],
-                    "validator": {
-                        "className": "org.joget.apps.form.lib.DefaultValidator",
-                        "properties": {
-                            "type": "",
-                            "message": "Please select a report type!",
-                            "mandatory": "true"
-                        }
-                    },
-                    "workflowVariable": "",
-                    "label": "Report Type",
-                    "id": "reportType",
-                    "value": "",
-                    "readonlyLabel": ""
+                        "workflowVariable": "",
+                        "label": "Report Type",
+                        "id": "reportType",
+                        "value": "",
+                        "readonlyLabel": ""
+                    }
+                },
+                {
+                    "className": "org.joget.apps.form.lib.TextField",
+                    "properties": {
+                        "encryption": "false",
+                        "readonly": "False",
+                        "style": "",
+                        "label": "Text Field",
+                        "id": "field2",
+                        "readonlyLabel": "False",
+                        "storeNumeric": "False"
+                    }
                 }
-            }],
+            ],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
