--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -58,6 +58,18 @@
                     }
                 },
                 {
+                    "className": "org.joget.apps.form.lib.TextField",
+                    "properties": {
+                        "encryption": "false",
+                        "readonly": "False",
+                        "style": "",
+                        "label": "Text Field",
+                        "id": "field4",
+                        "readonlyLabel": "False",
+                        "storeNumeric": "False"
+                    }
+                },
+                {
                     "className": "org.joget.apps.form.lib.PasswordField",
                     "properties": {
                         "strengthChecker": "False",
